Exercises_K8S/01_caramelo_libraryapi/Kubernetes-templatized/generated/02_redis.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis-deployment
  name: redis-service
  namespace: library-api
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis-deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis-deployment
  name: redis-deployment
  namespace: library-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-deployment
  template:
    metadata:
      labels:
        app: redis-deployment
    spec:
      containers:
      - image: redis:alpine
        name: master
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - mountPath: /data/redis
          name: redis-persistent-storage
      volumes:
      - name: redis-persistent-storage
        persistentVolumeClaim:
          claimName: redis-pvclaim
