Exercises_K8S/01_caramelo_libraryapi/Kubernetes-templatized/generated/05_webapp.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webapp-deployment
  name: webapp-service
  namespace: library-api
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: webapp-deployment
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp-deployment
  name: webapp-deployment
  namespace: library-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-deployment
  template:
    metadata:
      labels:
        app: webapp-deployment
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: webapp-app-conf
        image: rafahcsilva/k8s_libraryapi-app:1.4.2
        name: webapp-php-container
        ports:
        - containerPort: 9000
        resources:
          limits:
            cpu: 0.2
            memory: 256Mi
          requests:
            cpu: 0.1
            memory: 200Mi
      - command:
        - nginx
        - -g
        - daemon off;
        image: nginx:1.14.2
        name: webapp-nginx-container
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 0.1
            memory: 128Mi
          requests:
            cpu: 0.05
            memory: 100Mi
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: webapp-configmap-volume
        - mountPath: /var/www/html/public
          name: webapp-indexmap-volume
      volumes:
      - configMap:
          items:
          - key: nginx.conf
            path: nginx.conf
          name: webapp-nginxconf-map
        name: webapp-configmap-volume
      - configMap:
          items:
          - key: index.php
            path: index.php
          name: webapp-nginxindex-map
        name: webapp-indexmap-volume
