Exercises_K8S/01_caramelo_libraryapi/Kubernetes-templatized/generated/06_webapp-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: library-api
spec:
  rules:
  - host: libraryapi.test
    http:
      paths:
      - backend:
          service:
            name: webapp-service
            port:
              number: 80
        path: /
        pathType: Prefix
